--- a/config/database.yml
+++ b/config/database.yml
@@ -24,5 +24,6 @@ test:
 
 production:
   <<: *default
-#  database: db/production.sqlite3
-  database: /var/rails_db/production.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
